--- a/data/i18n/zh_CN/edit.html
+++ b/data/i18n/zh_CN/edit.html
@@ -11,6 +11,7 @@
         <p>自动补全[],{},(),"",''</p>
         <p>在线实时预览,使您爱上在线编程！</p>
         <p>zendcodeing支持,写代码健步如飞</p>
+        <p>Editor.md让你编写MD文档更轻松惬意</p>
         <p>更多功能,等待你的发现……</p>
     </div>
     <div class="tips orange">
